--- a/src/components/hero/hero.module.css
+++ b/src/components/hero/hero.module.css
@@ -1,7 +1,7 @@
 .hero {
   width: 1280px;
   height: 800px;
-  background-color: red;
+  background-color: #fff;
   display: flex;
   justify-content: center;
 }
