feat(Hero): add info text

--- a/src/components/hero/hero.module.css
+++ b/src/components/hero/hero.module.css
@@ -1,7 +1,28 @@
 .hero {
   width: 1280px;
-  height: 800px;
-  background-color: #fff;
+  height: calc(100vh - 100px);
+  color: #fff;
+  background-color: grey;
   display: flex;
-  justify-content: center;
+}
+
+.left-side {
+  display: flex;
+  flex-direction: column;
+  flex: 2;
+}
+
+.right-side {
+  display: flex;
+  flex-direction: column;
+  flex: 2;
+}
+
+.title {
+  font-size: 40px;
+}
+
+.first-text {
+}
+.second-text {
 }
