--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Tomorrow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+:root {
+  --bg: #000028;
+  --textColor: #fff;
+  --templateColor: #d5d820;
+  --softColor: #aaa7b1;
+}
+
 * {
   margin: 0;
   padding: 0;
