fix: update navbar link structure

--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,12 +1,21 @@
+.container {
+  width: 100%;
+  height: 100px;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 99;
+  background-color: var(--bg);
+}
+
 .navbar {
   width: var(--containerSize);
-  height: 100px;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  position: fixed;
-  z-index: 99px;
-  background-color: var(--bg);
+  margin: 0 auto;
 }
 
 .logo {
@@ -23,11 +32,17 @@
   gap: 40px;
 }
 
-.li a {
+.li {
+  cursor: pointer;
   display: inline-flex;
   color: var(--textColor);
   text-decoration: none;
   padding: 5px 10px;
+  transition: 0.3s ease-in-out;
+}
+
+.li:hover {
+  color: var(--templateColor);
 }
 
 .navEnd {
@@ -42,4 +57,6 @@
   font-size: 14px;
   font-weight: 600;
   background-color: var(--templateColor);
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
 }
