--- a/src/components/hero/hero.module.css
+++ b/src/components/hero/hero.module.css
@@ -64,6 +64,19 @@
 
 .rightSide {
   flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logoContainer {
+  width: 300px;
+  height: 300px;
+}
+
+.logoContainer img {
+  width: 100%;
+  height: 100%;
 }
 
 .timerContainer {
