--- a/src/components/jury/jury.module.css
+++ b/src/components/jury/jury.module.css
@@ -1,5 +1,5 @@
 .jury {
-  margin-top: 50px;
+  padding: 64px 0;
 }
 
 .juryMembers {
@@ -9,7 +9,6 @@
   align-items: center;
   justify-content: center;
   gap: 60px;
-  margin-bottom: 50px;
 }
 
 .title {
