--- a/src/components/infos/infox.module.css
+++ b/src/components/infos/infox.module.css
@@ -1,5 +1,6 @@
 .infosContainer {
-  width: var(--containerSize);
+  max-width: var(--containerSize);
+  width: 100%;
   color: var(--textColor);
   display: flex;
   align-items: center;
