--- a/src/components/jury/jury.module.css
+++ b/src/components/jury/jury.module.css
@@ -3,7 +3,8 @@
 }
 
 .juryMembers {
-  width: var(--containerSize);
+  max-width: var(--containerSize);
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
