--- a/src/components/calendar/calendar.module.css
+++ b/src/components/calendar/calendar.module.css
@@ -1,5 +1,6 @@
 .container {
-  width: var(--containerSize);
+  max-width: var(--containerSize);
+  width: 100%;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   border-bottom-left-radius: 20px;
