--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -10,7 +10,8 @@
 }
 
 .navbar {
-  width: calc(var(--containerSize) - 32px);
+  max-width: calc(var(--containerSize) - 32px);
+  width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
