--- a/src/components/awards/awards.module.css
+++ b/src/components/awards/awards.module.css
@@ -50,3 +50,39 @@
   font-size: 16px;
   color: var(--softColor);
 }
+
+@media screen and (max-width: 1280px) {
+}
+
+@media screen and (max-width: 1024px) {
+}
+
+@media screen and (max-width: 768px) {
+  .awards {
+    flex-direction: column;
+  }
+
+  .award1 {
+    order: 1;
+  }
+  .award2 {
+    order: 2;
+  }
+  .award3 {
+    order: 3;
+  }
+
+  .awardTitle {
+    font-size: 24px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .awards {
+    gap: 24px;
+  }
+
+  .awardTitle {
+    font-size: 20px;
+  }
+}
