--- a/src/components/hero/hero.module.css
+++ b/src/components/hero/hero.module.css
@@ -88,17 +88,19 @@
   font-size: 45px;
   font-weight: 600;
   align-items: center;
-  justify-content: center;
-  height: 150px;
   padding: 30px;
   border-radius: 20px;
 }
 
+.timerDesc {
+  flex: 1;
+}
+
 .timer {
   display: flex;
-  gap: 100px;
+  flex: 2;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -132,13 +134,103 @@
 }
 
 @media screen and (max-width: 768px) {
-  .title {
-    font-size: 48px;
+  .hero {
+    flex-direction: column-reverse;
+    gap: 64px;
+  }
+  .subTitle {
+    font-size: 18px;
+  }
+
+  .mainTitle {
+    font-size: 40px;
+  }
+
+  .mainContent {
+    font-size: 20px;
+  }
+
+  .content {
+    font-size: 32px;
+  }
+
+  .date {
+    font-size: 24px;
+  }
+
+  .logoContainer {
+    width: 230px;
+    height: 230px;
+  }
+
+  .timerContainer {
+    padding: 16px;
+    font-size: 36px;
+    font-weight: 500;
   }
 }
 
 @media screen and (max-width: 640px) {
-  .title {
-    font-size: 36px;
+  .hero {
+    gap: 48px;
+  }
+
+  .subTitle {
+    font-size: 16px;
+  }
+
+  .mainTitle {
+    font-size: 32px;
+  }
+
+  .mainContent {
+    font-size: 18px;
+  }
+
+  .content {
+    font-size: 24px;
+  }
+
+  .date {
+    font-size: 20px;
+  }
+
+  .logoContainer {
+    width: 180px;
+    height: 180px;
+  }
+
+  .timerContainer {
+    font-size: 32px;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .hero {
+    gap: 36px;
+  }
+
+  .logoContainer {
+    width: 160px;
+    height: 160px;
+  }
+
+  .timerContainer {
+    font-size: 24px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .hero {
+    gap: 32px;
+  }
+
+  .logoContainer {
+    width: 120px;
+    height: 120px;
+  }
+
+  .timerContainer {
+    font-size: 18px;
   }
 }
