--- a/src/components/sponsor/sponsor.module.css
+++ b/src/components/sponsor/sponsor.module.css
@@ -16,3 +16,10 @@
   width: auto;
   height: 300px;
 }
+
+@media screen and (max-width: 768px) {
+  .img img {
+    width: auto;
+    height: 200px;
+  }
+}
