--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -68,6 +68,7 @@
   background-color: var(--templateColor);
   cursor: pointer;
   transition: 0.3s ease-in-out;
+  color: black;
 }
 
 .navMobilContainer {
