--- a/src/components/awards/awards.module.css
+++ b/src/components/awards/awards.module.css
@@ -27,32 +27,20 @@
 
 .awardTitle {
   font-size: 28px;
-}
-
-/* .img {
-  margin: 15px 0;
+  text-align: center;
+  margin-bottom: 40px;
 }
 
 .award2 > img {
-  width: 90px;
-  height: auto;
+  width: 150px;
 }
 
 .award1 > img {
-  width: 280px;
+  width: 300px;
 }
 
 .award3 > img {
-  width: 104px;
-} */
-
-.question {
-  font-size: 130px;
-}
-
-.awardName {
-  font-size: 16px;
-  color: var(--softColor);
+  width: 150px;
 }
 
 @media screen and (max-width: 1280px) {
@@ -63,7 +51,9 @@
 
 @media screen and (max-width: 768px) {
   .awards {
+    display: flex;
     flex-direction: column;
+    align-items: center;
   }
 
   .award1 {
