--- a/src/components/sponsor/sponsor.module.css
+++ b/src/components/sponsor/sponsor.module.css
@@ -31,6 +31,11 @@
   height: auto;
 }
 
+.largeImg img {
+  width: 100%;
+  height: auto;
+}
+
 @media screen and (max-width: 1280px) {
   .img {
     width: calc(100% / 4 - 32px);
